trafficRouting/nova-v1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nova-dep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nova
        version: v1
    spec:
      containers:
      - name: nova
        image: nicksrj/nova
        ports:
        - containerPort: 80
