trafficRouting/nova-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nova-svc
  labels:
    app: nova
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: nova
