trafficRouting/nova-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nova-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - nova-gateway
  http:
# - match:
#   - uri:
#       prefix: /nova
  - route:
    - destination:
        host: nova-svc
#        subset: v1
#      weight: 80
#    - destination:
#        host: nova-svc
#        subset: v2
#      weight: 20
